# GAER

./: .gitattributes  .gitignore  CITATION.cff  INSTALL.md  LICENSE  LICENSE-DATA  README.md  REQUIREMENTS.md  STATUS.md  pyproject.toml  requirements
GT/: Harmony_distributed_camera_gt.json  Harmony_drivers_framework_gt.json  archstudio_gt.json  bash-4.2-GT.json  chromium_gt.json  hadoop_gt.json  jabref_gt.json  libxml2-2.4.22-GT.json  oodt_0.2_full_ground_truth_recovery.json  teammates_gt.json
data/: archstudio.csv  archstudio_deps.csv  bash.csv  bash_deps.csv  chromium.csv  chromium_deps.csv  hadoop.csv  hadoop_deps.csv  hdc.csv  hdc_deps.csv  hdf_deps.csv  hfd.csv  jabref.csv  jabref_deps.csv  jabref_gt.json  libxml.csv  libxml_deps.csv  oodt.csv  oodt_deps.csv  teammates.csv  teammates_deps.csv  teammates_gt.json
docker/: README.md
docker/GAER_CUDA/: Dockerfile
docker/SARIF/: Dockerfile
src/: run_experiments.py
src/eval/: clusterer.py
src/metrics/: a2a.py  c2c.py  mojo.py  turbomq.py
src/models/: gnn_encoder.py  node2vec_model.py
src/preprocessing/: gaer_data.py  negar_data.py  w2v_embeddings.py
src/train/: gae_training.py
